--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,10 @@ spring:
     show-sql: true 
     hibernate:
       ddl-auto: none
+      
+keycloak:
+  realm: javatechie
+  auth-server-url: http://localhost:8180
+  resource: springboot-keycloak
+  public-client: true
+  bearer-only: true
