--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,9 +24,9 @@ spring:
     hibernate:
       ddl-auto: none
       
-keycloak:
-  realm: javatechie
-  auth-server-url: http://localhost:8180
-  resource: springboot-keycloak
-  public-client: true
-  bearer-only: true
+#keycloak:
+#  realm: javatechie
+#  auth-server-url: http://localhost:8180
+#  resource: springboot-keycloak
+#  public-client: true
+#  bearer-only: true
